NodejsMS-Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-ms
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nodejs-ms
  template:
    metadata:
      labels:
        app: nodejs-ms
    spec:
      containers:
      - name: nodejs-ms
        image: my-repo/node:latest
        ports:
        - containerPort: 8080
