PythonMS-Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-microservice
spec:
  replicas: 3
  selector:
    matchLabels:
      app: python-microservice
  template:
    metadata:
      labels:
        app: python-microservice
    spec:
      containers:
      - name: python-microservice
        image: <your-registry>/my-python-microservice:latest
        ports:
        - containerPort: 5000
