NodejsMS-Service.yml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-ms
spec:
  selector:
    app: nodejs-ms
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
