PythonMS-Ingress.yml
apiVersion: v1
kind: Service
metadata:
  name: python-microservice
spec:
  selector:
    app: python-microservice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
